--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.6rem;
+  background: linear-gradient(to left, #d4af37 50%, #660066 50%);
 }
 
 code {
